# pbc

./: CMakeLists.txt  FindGMP.cmake
arith/: fasterfp.c  fastfp.c  field.c  fieldquadratic.c  fp.c  montfp.c  multiz.c  naivefp.c  poly.c  tinyfp.c  z.c
ecc/: a_param.c  curve.c  pairing.c  singular.c
include/: pbc.h  pbc_structs.h
