cmake_minimum_required(VERSION 3.13)
project(pbc C)

set(CMAKE_C_STANDARD 11)

include_directories(ecc)
include_directories(include)
include_directories(misc)
include_directories(pbc)

add_executable(pbc
        arith/dlog.c
        arith/fasterfp.c
        arith/fastfp.c
        arith/field.c
        arith/fieldquadratic.c
        arith/fp.c
        arith/init_random.c
        #arith/init_random.win32.c
        arith/montfp.c
        arith/multiz.c
        arith/naivefp.c
        arith/poly.c
        arith/random.c
        arith/ternary_extension_field.c
        arith/tinyfp.c
        arith/z.c
        benchmark/benchmark.c
        benchmark/ellnet.c
        benchmark/multipairing.c
        benchmark/timersa.c
        ecc/a_param.c
        ecc/curve.c
        ecc/d_param.c
        ecc/e_param.c
        ecc/eta_T_3.c
        ecc/f_param.c
        ecc/g_param.c
        ecc/hilbert.c
        ecc/mnt.c
        ecc/mpc.c
        ecc/mpc.h
        ecc/pairing.c
        ecc/param.c
        ecc/param.h
        ecc/singular.c
        example/bls.c
        example/hess.c
        example/joux.c
        example/paterson.c
        example/yuanli.c
        example/zhangkim.c
        example/zss.c
        gen/gena1param.c
        gen/genaparam.c
        gen/gendparam.c
        gen/geneparam.c
        gen/genfparam.c
        gen/gengparam.c
        gen/hilbertpoly.c
        gen/listfreeman.c
        gen/listmnt.c
        guru/19.c
        guru/59.c
        guru/checkfp.c
        guru/eta_T_3_test.c
        guru/exp_test.c
        guru/fp_test.c
        guru/indexcalculus.c
        guru/param_parse_test.c
        guru/poly_test.c
        guru/prodpairing_test.c
        guru/quadratic_test.c
        guru/sing.c
        guru/ternary_extension_field_test.c
        guru/testindexcalculus.c
        guru/timefp.c
        include/pbc.h
        include/pbc_a1_param.h
        include/pbc_a_param.h
        include/pbc_curve.h
        include/pbc_d_param.h
        include/pbc_e_param.h
        include/pbc_f_param.h
        include/pbc_field.h
        include/pbc_fieldquadratic.h
        include/pbc_fp.h
        include/pbc_g_param.h
        include/pbc_hilbert.h
        include/pbc_i_param.h
        include/pbc_memory.h
        include/pbc_mnt.h
        include/pbc_multiz.h
        include/pbc_pairing.h
        include/pbc_param.h
        include/pbc_poly.h
        include/pbc_random.h
        include/pbc_singular.h
        include/pbc_structs.h
        include/pbc_ternary_extension_field.h
        include/pbc_test.h
        include/pbc_utils.h
        include/pbc_vc_compat.win32.h
        include/pbc_z.h
        misc/darray.c
        misc/darray.h
        misc/extend_printf.c
        misc/get_time.c
        misc/get_time.win32.c
        misc/memory.c
        misc/symtab.c
        misc/symtab.h
        misc/utils.c
        pbc/oldpbc.c
        pbc/pbc.c
        pbc/pbc_getline.c
        pbc/pbc_getline.readline.c
        pbc/pbc_tree.h
        pbc/pbc_vc_lex.win32.h
        pbc/XGetopt.win32.c
        pbc/XGetopt.win32.h)
